Avoid horizontal scrolling on narrow views for some long DOIs #2936

--- a/src/html-pages/paper-activity-page/render-as-html/_activity-feed.scss
+++ b/src/html-pages/paper-activity-page/render-as-html/_activity-feed.scss
@@ -46,7 +46,6 @@
 
 .activity-feed__item__date {
   color: settings.$colour-text-secondary;
-  flex-shrink: 0;
 }
 
 .activity-feed__item__title,
